# mas_python_fbp

./: .dockerignore  CHANGELOG.md  Dockerfile  README.md  agents_process.md  calibration_flow_7.json  channel_starter_service.toml  docker-bake.hcl  local_cmds.json  local_components.json  local_components_service.toml  pyproject.toml  release-please-config.json
.github/workflows/: release.yaml
configs/: channel_starter_service.toml  local_cmds.json  local_components.json  local_components_cache.json  local_components_service.toml
flows/: test_flow4.json  test_load_monica_env.json
tests/: component_harness.py
tests/components/console/: __init__.py  test_standard_components.py
tests/components/dakis/: __init__.py  test_object_store_integration.py  test_process_components.py
tests/components/ip/: test_process_components.py
tests/components/string/: __init__.py  test_process_components.py
tests/run/: test_argparse_utils.py  test_local_component_metadata_loading.py  test_log_level_propagation.py  test_logging_config.py  test_process_array_ports.py  test_process_config_values.py  test_process_metadata_models.py  test_standard_component_metadata_imports.py  test_standard_component_runtime.py
zalfmas_fbp/components/: README.md  aggregate_timeseries_data_monthly.py  console_output.py  get_a_datasets_timeseries.py  lift_attributes.py  proj_transform_coordinates.py  read_csv.py  read_file.py  split_string.py  timeseries_cap_to_data.py  timeseries_data_to_csv.py  timeseries_to_data.py  to_geo_coord.py  write_file.py
zalfmas_fbp/components/climate/: climate_service_to_datasets.py  datasets_to_timeseries.py  timeseries_cap_to_data.py  timeseries_data_to_csv.py  timeseries_data_to_monthly_aggregate.py
zalfmas_fbp/components/component_templates/: __init__.py  process_component_template.py  runnable_component_template.py
zalfmas_fbp/components/console/: console_output.py
zalfmas_fbp/components/consumers/: africa_calibration.py  africa_calibration_consumer.py
zalfmas_fbp/components/dakis/: __init__.py  burn_geoparquet_on_raster.py  create_empty_raster.py  fetch_rbs_by_raster.py  filter_geoparquet_by_raster.py  merge_geoparquet.py  read_file_from_disk.py  read_file_from_object_store.py  relabel_geoparquet.py  write_file_to_disk.py  write_file_to_object_store.py  write_geoparquet.py  write_raster.py
zalfmas_fbp/components/dakis/common/: __init__.py  burn.py  duckdb_utils.py  file_payload.py  geoparquet.py  merge.py  object_store.py  raster.py  rbs.py  relabel.py  write_geoparquet.py  write_raster.py
zalfmas_fbp/components/dakis/dakis_process/: __init__.py  create_empty_raster.py  filter_geoparquet_by_raster.py  relabel_geoparquet.py  write_geoparquet.py
zalfmas_fbp/components/data/transform/: ordered_flatten_nested_dicts.py
zalfmas_fbp/components/file/: read_csv.py  read_excel.py  read_file.py  write_file.py
zalfmas_fbp/components/geo/: create_lat_lon_coords.py  get_lat_lon_grid_value.py  proj_transform_coordinates.py  to_geo_coord.py
zalfmas_fbp/components/grid/: grid_service.py  use_grid_service.py
zalfmas_fbp/components/ip/: add_attribute.py  add_content.py  copy.py  copy_ip.py  copy_ip_on_trigger.py  lift_attributes.py  load_balancer.py  wrap_into_substream.py
zalfmas_fbp/components/json/: apply_gjson_queries.py  filter_json.py  interpolate_json_by_key.py  json_to_common_value.py  map_json_values.py  update_json.py
zalfmas_fbp/components/management/: ilr_sowing_harvest_dates.py
zalfmas_fbp/components/models/monica/: create_monica_capnp_env.py  create_monica_env.py  create_monica_json_env.py  write_monica_csv.py
zalfmas_fbp/components/producers/: africa_calibration.py  africa_calibration_producer.py
zalfmas_fbp/components/soil/: use_soil_service.py
zalfmas_fbp/components/spotpy/: load_calibration_params.py  read_observed_values.py  spotpy_comp.py
zalfmas_fbp/components/string/: collect_into_list.py  into_array.py  split_string.py  split_string2.py  split_string_into_array.py  split_string_into_list.py  to_string.py
zalfmas_fbp/run/: argparse_utils.py  channel_starter_service.py  channels.py  components.py  local_components_service.py  logging_config.py  metadata.py  ports.py  process.py  run_blazor_draw_fbp_flow.py
zalfmas_fbp/run/default_configs/: channel_starter_service.toml  local_components_service.toml
zalfmas_fbp/run/process/: __init__.py  bootstrap.py  chunked_io.py  config_codec.py  context.py  core.py  errors.py  identity.py  input_runtime.py  io_runtime.py  output_runtime.py  process.py  runner.py  task_utils.py  transitions.py  types.py
zalfmas_fbp/run/process/config/: __init__.py  config_codec.py  config_runtime.py
zalfmas_fbp/run/process/io/: __init__.py  chunked_io.py
zalfmas_fbp/run/process/runtime/: __init__.py  input_runtime.py  lifecycle_runtime.py  output_runtime.py  port_runtime.py  state_runtime.py
