[project]
name = "zalfmas-fbp"
version = "0.2.32"
description = "lib and tooling for Cap'n Proto-based FBP flows"
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [{ name = "Michael Berg-Mohnicke", email = "michael.berg@zalf.de" }]
dependencies = [
  "tomli>=2.4.1,<3",
  "tomli-w>=1.2.0,<2",
  "netcdf4>=1.7.4,<2",
  "spotpy>=1.6.7,<2",
  "matplotlib>=3.10.9,<4",
  "pycapnp>=2.2.2,<3",
  "zalfmas-common @ git+https://github.com/zalf-rpm/mas_python_common@new-typing-module",
  "zalfmas-capnp-schemas @ git+https://github.com/zalf-rpm/mas_capnproto_schemas@new-typing-module",
  "zalfmas-services>=0.1.16,<0.2",
  "pymep>=1.0.7,<2",
  "pydantic (>=2.13.3,<3.0.0)",
  "geojson-pydantic (>=2.1.1,<3.0.0)",
  "rasterio (>=1.5.0,<2.0.0)",
  "pytest (>=9.0.3,<10.0.0)",
  "geopandas (>=1.1.3,<2.0.0)",
  "pyarrow (>=24.0.0,<25.0.0)",
  "duckdb (>=1.5.2,<2)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
include = [{ path = "zalfmas_fbp/run/default_configs" }]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
libsodium = ">=1.0.22,<2"
pixi-pycharm = ">=0.0.11,<0.0.12"

# Referencing local packages in editable mode for pixi
[tool.pixi.pypi-dependencies]
# zalfmas-common = { path = "../mas_python_common", editable = true }
#zalfmas-capnp-schemas = { path = "../mas_capnproto_schemas", editable = true }

# Example for referencing local packages in editable mode just uncomment these lines while keeping the above it will overwrite
# If the line for the package in the dependencies section is commented out it will have no effect

# [tool.poetry.dependencies]
# zalfmas-common = { path = "../mas_python_common", develop = true }
# zalfmas-capnp-schemas = { path = "../mas_capnproto_schemas", develop = true }
# zalfmas-services = { path = "../mas_python_services", develop = true }

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.0"

[tool.ruff]
line-length = 120
target-version = "py312"
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "T", "G", "BLE"]
ignore = ["E501"]
