[project]
name = "zalfmas-fbp"
version = "0.2.33"
description = "lib and tooling for Cap'n Proto-based FBP flows"
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [{ name = "Michael Berg-Mohnicke", email = "michael.berg@zalf.de" }]
dependencies = [
  "tomli-w>=1.2.0,<2",
  "netcdf4>=1.7.4,<2",
  "spotpy>=1.6.7,<2",
  "matplotlib>=3.10.9,<4",
  "pycapnp>=2.2.2,<3",
  "zalfmas-common>=0.1.44,<0.2",
  "zalfmas-capnp-schemas>=0.1.64,<0.2",
  "zalfmas-services>=0.1.16,<0.2",
  "pymep>=1.0.7,<2",
  "pydantic>=2.13.4,<3",
  "geojson-pydantic>=2.1.1,<3",
  "rasterio>=1.5.0,<2",
  "pytest>=9.0.3,<10",
  "geopandas>=1.1.3,<2",
  "pyarrow>=24.0.0,<25",
  "duckdb>=1.5.3,<2",
  "owslib>=0.35.0,<0.36",
  "boto3>=1.43.15,<2",
  "types-boto3[all,s3]>=1.43.15,<2",
  "ruff>=0.15.14,<0.16",
  "pyright>=1.1.409,<2",
  "ty>=0.0.39,<0.0.40",
]

[tool.pixi.dependencies]
libsodium = ">=1.0.22,<2"
pixi-pycharm = ">=0.0.11,<0.0.12"

[dependency-groups]
dev = ["ruff", "pyright", "ty"]

[tool.pixi.environments]
dev = ["dev"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
include = [{ path = "zalfmas_fbp/run/default_configs" }]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

# Referencing local packages in editable mode for pixi
# [tool.pixi.pypi-dependencies]
# zalfmas-common = { path = "../mas_python_common", editable = true }
# zalfmas-capnp-schemas = { path = "../mas_capnproto_schemas", editable = true }

# Example for referencing local packages in editable mode just uncomment these lines while keeping the above it will overwrite
# If the line for the package in the dependencies section is commented out it will have no effect

# [tool.poetry.dependencies]
# zalfmas-common = { path = "../mas_python_common", develop = true }
# zalfmas-capnp-schemas = { path = "../mas_capnproto_schemas", develop = true }
# zalfmas-services = { path = "../mas_python_services", develop = true }

[tool.ruff]
line-length = 120
target-version = "py312"
[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "T",
  "G",
  "BLE",
  "COM",
  "PTH",
  "C417",
  "TRY",
  "ASYNC109",
  # "D100",
  # "D101",
]

ignore = ["E501", "COM812"]

[tool.pyright]
ignore = ["tests"]
