[project]
name = "zalfmas-fbp"
version = "0.2.34"
description = "lib and tooling for Cap'n Proto-based FBP flows"
readme = "README.md"
requires-python = ">=3.12,<3.15"
authors = [
    { name = "Michael Berg-Mohnicke", email = "michael.berg@zalf.de" },
    { name = "Vincent Dlugosch", email = "vincent.dlugosch@zalf.de" }
]
dependencies = [
  "tomli-w>=1.2.0,<2",
  "netcdf4>=1.7.4,<2",
  "spotpy>=1.6.7,<2",
  "matplotlib>=3.10.9,<4",
  "pycapnp>=2.2.3,<3",
  "zalfmas-common>=0.1.47,<0.2",
  "zalfmas-capnp-schemas>=0.1.67,<0.2",
  "zalfmas-services>=0.1.16,<0.2",
  "pymep>=1.0.7,<2",
  "pydantic>=2.13.4,<3",
  "geojson-pydantic>=2.1.1,<3",
  "rasterio>=1.5.0,<2",
  "geopandas>=1.1.3,<2",
  "pyarrow>=24.0.0,<25",
  "duckdb>=1.5.3,<2",
  "owslib>=0.36.0,<0.37",
  "boto3>=1.43.23,<2", "gjson>=1.2.0,<2",
]

[dependency-groups]
dev = [
  "pytest>=9.0.3,<10",
  "ruff>=0.15.16,<0.16",
  "ty>=0.0.44,<0.0.45",
  "types-boto3[all,s3]>=1.43.23,<2",
  "basedpyright>=1.39.6,<2",
]

[tool.pixi.dependencies]
libsodium = ">=1.0.22,<2"
openpyxl = ">=3.1.5,<4"

[tool.pixi.pypi-dependencies]
zalfmas-fbp = { path = ".", editable = true }

# Referencing local packages in editable mode for pixi
# zalfmas-common = { path = "../mas_python_common", editable = true }
# zalfmas-capnp-schemas = { path = "../mas_capnproto_schemas", editable = true }

[tool.pixi.feature.dev.dependencies]
pixi-pycharm = ">=0.0.11,<0.0.12"

[tool.pixi.environments]
dev = ["dev"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "T",
  "G",
  "BLE",
  "COM",
  "PTH",
  "C417",
  "TRY",
  "ASYNC109",
  # "D100",
  # "D101",
]
ignore = ["E501", "COM812"]

[tool.basedpyright]
ignore = ["tests"]
typeCheckingMode = "basic"
venvPath = ".pixi/envs"
venv = "dev"
